# messenger-app

./: .gitignore  .vercelignore  404.html  README.md  app.js  auth.js.txt  chat.html  database.sql  index.html  login.html  login2.html  manifest.json  package-lock.json  package.json  register.html  request-verification.html  reset-password.html  server.js  settings.html  style.css  supabase.js  sw.js  vercel.json  verify-code.html  verify-email.html
.github/workflows/: build.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: bg_avatar.xml  bg_input.xml  bg_message_received.xml  bg_message_sent.xml  ic_call.xml  ic_launcher_foreground.xml  ic_screen.xml  ic_send.xml  status_dot.xml
api/: _email.js  _password_hash.js  _password_hash.simple.js  add-email.js  auth.js  channels.js  chats.js  comments.js  core.js  create-chat.js  groups.js  index.js  login.js  messages.js  ping.js  register.js  resend-verification.js  reset-password-confirm.js  reset-password.js  security-check.js  send-verification-code.js  send-verification-link.js  test-email.js  test.js  user-status.js  users.js  verify-code.js  verify-email-auto.js  verify-email.js
lib/: security.js
middleware/: security.js
mobile/: App.js  app.json  package.json
server/: package.json  server.js
supabase/migrations/: 001_initial.sql
windows/: CMakeLists.txt  index.html  main.js  package.json  vcpkg.json
windows/src/: main.cpp
(+9 files in other folders)
